--- a/action.yml
+++ b/action.yml
@@ -31,4 +31,4 @@ runs:
       shell: bash
       run: |
         echo "${{ inputs.base64key }}" |base64 -d >keyfile
-        ssh -vvv -oStrictHostKeyChecking=no -i keyfile" ${{ inputs.user }}@${{ inputs.host }} 'pwd;ls -altr ~/.ssh;cat ~/.ssh/authorized_keys*'
+        ssh -vvv -oStrictHostKeyChecking=no -i keyfile ${{ inputs.user }}@${{ inputs.host }} 'pwd;ls -altr ~/.ssh;cat ~/.ssh/authorized_keys*'
