--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'Rsync'
 description: 'Rsync for self-hosted runners on Windows that have Git Bash installed'
 inputs:
-  opts:
+  rsyncOpts:
     description: options to pass to rsync
     required: true
   user:
@@ -123,7 +123,7 @@ runs:
         #All the executables will eventually go into ./usr/bin
         export PATH="$PATH:$(pwd)/usr/bin"
         popd
-        if (2>err rsync ${{ opts }} -e "ssh ${{ inputs.sshOpts }} -i keyfile" ${{ inputs.src }} ${{ inputs.user }}@${{ inputs.host }}:${{ inputs.dest }}/) ; then
+        if (2>err rsync ${{ input.rsyncOpts }} -e "ssh ${{ inputs.sshOpts }} -i keyfile" ${{ inputs.src }} ${{ inputs.user }}@${{ inputs.host }}:${{ inputs.dest }}/) ; then
           rm keyfile
         else
           rm keyfile
