--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ inputs:
   verbose:
     description: Calculate md5sums of the files that will be replaced and write them to the log
     type: boolean
-    default: false
+    default: true
   sshOpts:
     description: ssh command options to use
     default: -oStrictHostKeyChecking=no
